# CallInsight

./: .gitignore  .zshrc  README.md  pyproject.toml
audiofiles/: dialog.m4a
src/: app.py  augmentTranscription.py  recordAudio.py  saveTranscription.py  transcription.py
src/chains/: augmentChain.py  summaryActionsChain.py
src/core/: chainWrapper.py
src/prompts/: augmentPrompt.py  summaryActionsPrompt.py
