[tool.poetry]
name = "src"
version = "0.1.0"
description = "Description of call audio"
authors = ["Oleksandr Besan <oleksandr.besan@okiiyume.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.9"
openai = "^1.12.0"
flask = "^3.0.2"
flasgger = "^0.9.7.1"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
 
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"